--- a/html/extension.html
+++ b/html/extension.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>推广中心</title>
+    <title>分享中心</title>
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="../css/aui.2.0.css">
@@ -101,7 +101,7 @@
     <a href="javascript:;">
         <div class="aui-bar-tab-item my-aui-active" tapmode>
             <i class="aui-iconfont aui-icon-calendar"></i>
-            <div class="aui-bar-tab-label">推广中心</div>
+            <div class="aui-bar-tab-label">分享中心</div>
         </div>
     </a>
     <a href="commodity.html">
