--- a/html/generalize_detail.html
+++ b/html/generalize_detail.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <title>推广明细</title>
+    <title>分享明细</title>
     <link rel="stylesheet" href="../common/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="../common/datetimepicker/css/bootstrap-datepicker.min.css">
     <link rel="stylesheet" href="../css/aui.2.0.css">
@@ -17,7 +17,7 @@
     <div class="aui-col-xs-3 my-col-xs-3">
         <i class="aui-iconfont aui-icon-left"></i>
     </div>
-    <div class="aui-title my-aui-title">推广明细</div>
+    <div class="aui-title my-aui-title">分享明细</div>
 </header>
 <section id="total-box">
 
