--- a/html/goodsdetail.html
+++ b/html/goodsdetail.html
@@ -50,7 +50,7 @@
                         <b class="goodsdetail-price">￥{{productPrice}}</b>
                         <s class="goodsdetail-price-del">￥{{productOrginPrice}}</s>
                     </div>
-                    <div class="now-generalize">立即推广</div>
+                    <div class="now-generalize">立即分享</div>
                 </div>
 
                 <div class="goodsdetail-post">
@@ -167,7 +167,7 @@
             </div>
         </div>
     </section>
-    <!--立即推广-->
+    <!--立即分享-->
     <section class="wxmass-sends">
         <section class="wxmass-sends-item">
             <div class="wxmass-item-title">
