--- a/html/index.html
+++ b/html/index.html
@@ -34,7 +34,7 @@
     <div class="footer-height"></div>
     <div class="all-mask"></div>
 
-    <!--立即推广-->
+    <!--立即分享-->
     <section class="wxmass-sends">
         <section class="wxmass-sends-item">
             <div class="wxmass-item-title">
@@ -97,7 +97,7 @@
     <a href="extension.html">
         <div class="aui-bar-tab-item" tapmode>
             <i class="aui-iconfont aui-icon-calendar"></i>
-            <div class="aui-bar-tab-label">推广中心</div>
+            <div class="aui-bar-tab-label">分享中心</div>
         </div>
     </a>
     <a href="commodity.html">
@@ -122,11 +122,11 @@
             </div>
             <div class="dis-list-content">
                 <div class="dis-shop-detail">
-                    <span class="hongbao youhuiquan">红包 <span>{{conPrice}}</span>元</span>
+                    <span class="hongbao youhuiquan">红包 <span>{{conTicketPrice}}</span>元</span>
                     <span class="shop-list-name">{{goodsName}}</span>
                 </div>
                 <div class="dis-price">
-                    <span>￥{{conTicketPrice}}</span>
+                    <span>￥{{conPrice}}</span>
                     <span>￥{{oriPrice}}</span>
                 </div>
                 <div class="dis-evaluate">
@@ -135,7 +135,7 @@
                 </div>
                 <div class="dis-sale">
                     <span>库存：{{goodsInventory}}</span>
-                    <span class="dis-share" data-id="{{id}}">立即推广</span>
+                    <span class="dis-share" data-id="{{id}}">立即分享</span>
                 </div>
             </div>
         </div>
