--- a/html/my.html
+++ b/html/my.html
@@ -52,7 +52,7 @@
                     <li class="li-bor">
                         <div class="three"></div>
                         <div>
-                            <span class="ab e9-color">推广明细</span><br>
+                            <span class="ab e9-color">分享明细</span><br>
                             <!--<span>{{preProfit}}</span>-->
                         </div>
                     </li>
@@ -87,7 +87,7 @@
                 </li>
                 <!--<li>
                     <a href="javascript:;" class="display-box">
-                        推广明细
+                        分享明细
                     </a>
                 </li>-->
                 <li>
@@ -121,7 +121,7 @@
     <a href="extension.html">
         <div class="aui-bar-tab-item" tapmode>
             <i class="aui-iconfont aui-icon-calendar"></i>
-            <div class="aui-bar-tab-label">推广中心</div>
+            <div class="aui-bar-tab-label">分享中心</div>
         </div>
     </a>
     <a href="commodity.html">
