--- a/html/myShop.html
+++ b/html/myShop.html
@@ -11,6 +11,11 @@
     <link rel="stylesheet" href="../css/common1.css">
     <link rel="stylesheet" href="../css/common.css">
     <link rel="stylesheet" href="../css/myshop.css">
+    <style>
+        .dis-sale {
+            width: 4rem;
+        }
+    </style>
 </head>
 <body>
 <!--头部-->
@@ -99,7 +104,7 @@
                             <div class="dis-del-sale">
                                 <div class="dis-del"></div>
                                 <div class="dis-sale now-tuiguang">
-                                    <span>立即推广</span>
+                                    <span>立即分享</span>
                                 </div>
                             </div>
 
@@ -112,7 +117,7 @@
     </section>
     <div class="loading">加载更多...</div>
     <div class="no-info">没有更多数据了...</div>
-    <!--立即推广-->
+    <!--立即分享-->
     <section class="wxmass-sends">
         <section class="wxmass-sends-item">
             <div class="wxmass-item-title">
