--- a/html/othersshop.html
+++ b/html/othersshop.html
@@ -90,7 +90,7 @@
                                 <span>佣金率：{{marketProfitPercent}}</span>
                             </div>
                             <div class="dis-sale">
-                                <span>立即推广</span>
+                                <span>立即分享</span>
                             </div>
 
                         </div>
@@ -102,7 +102,7 @@
     </section>
     <div class="loading">加载更多...</div>
     <div class="no-info">没有更多数据了...</div>
-    <!--立即推广-->
+    <!--立即分享-->
     <section class="wxmass-sends">
         <section class="wxmass-sends-item">
             <div class="wxmass-item-title">
