--- a/html/selected.html
+++ b/html/selected.html
@@ -46,7 +46,7 @@
                             <div class="dis-del-sale">
                                 <div class="dis-del"></div>
                                 <div class="dis-sale ">
-                                    <span class="now-tuiguang">立即推广</span>
+                                    <span class="now-tuiguang">立即分享</span>
                                 </div>
                             </div>
 
@@ -78,7 +78,7 @@
                         <div class="dis-del-sale">
                             <div class="dis-del"></div>
                             <div class="dis-sale">
-                                <span>立即推广</span>
+                                <span>立即分享</span>
                             </div>
                         </div>
                     </div>
@@ -91,7 +91,7 @@
 
 </section>
 
-<!--立即推广-->
+<!--立即分享-->
 <section class="wxmass-sends">
     <section class="wxmass-sends-item">
         <div class="wxmass-item-title">
@@ -218,7 +218,7 @@
                     }
                     flag=0;
 
-                    //这里添加立即推广事件
+                    //这里添加立即分享事件
                     $('.dis-sale ').bind('click',nowTuiGuang);
 
                 }else {
@@ -229,7 +229,7 @@
         })
     }
 
-    //立即推广
+    //立即分享
     function nowTuiGuang(event) {
         event.preventDefault();
         event.stopPropagation();
