--- a/html/shopShare.html
+++ b/html/shopShare.html
@@ -101,7 +101,7 @@
     </section>
     <div class="loading">加载更多...</div>
     <div class="no-info">没有更多数据了...</div>
-    <!--立即推广-->
+    <!--立即分享-->
     <section class="wxmass-sends">
         <section class="wxmass-sends-item">
             <div class="wxmass-item-title">
