去掉服务器异常弹框，更改原价为友惠价，添加今日必发

--- a/html/extension.html
+++ b/html/extension.html
@@ -37,11 +37,15 @@
         </div>
         <!--分享部分-->
         <section class="my-share">
+            <div class="bifa-box">
+                <span class="bifa">- 今日必发 -</span>
+                <span class="update">每日零点更新</span>
+            </div>
             <ul>
                 <li class="my-share-li">
                     <a href="wxmass.html">
                         <div class="my-share-li-img">
-                            <img src="../images/weixin.png" alt="">
+                            <img src="../images/icon_weixin.png" alt="">
                         </div>
                     </a>
 
@@ -51,7 +55,7 @@
                 <li class="my-share-li">
                     <a href="friends.html">
                         <div class="my-share-li-img">
-                            <img src="../images/pengyouquan.png" alt="">
+                            <img src="../images/icon_quan.png" alt="">
                         </div>
                     </a>
 
@@ -61,7 +65,7 @@
                 <li class="my-share-li">
                     <a href="selected.html">
                         <div class="my-share-li-img">
-                            <img src="../images/jingxuan.png" alt="">
+                            <img src="../images/icon_jing.png" alt="">
                         </div>
                     </a>
                     <span>单品精选</span>
