--- a/html/index.html
+++ b/html/index.html
@@ -125,13 +125,14 @@
                     <span class="hongbao youhuiquan">红包 <span>{{conTicketPrice}}</span>元</span>
                     <span class="shop-list-name">{{goodsName}}</span>
                 </div>
-                <div class="dis-price">
+                <!--<div class="dis-price">
                     <span>￥{{conPrice}}</span>
                     <span>￥{{oriPrice}}</span>
-                </div>
+                </div>-->
                 <div class="dis-evaluate">
                     <span>赚:{{commissionProfit}}元</span>
-                    <span>佣金率 <span>{{splitNumber commission}}%</span></span>
+                    <!--<span>佣金率 <span>{{splitNumber commission}}%</span></span>-->
+                    <span>友惠价:￥{{oriPrice}}</span>
                 </div>
                 <div class="dis-sale">
                     <span>库存：{{goodsInventory}}</span>
