--- a/html/selected.html
+++ b/html/selected.html
@@ -310,7 +310,7 @@
                 }
             },
             error:function () {
-                alert('服务器异常');
+                //alert('服务器异常');
             }
         });
 
@@ -364,7 +364,7 @@
                 }
             },
             error:function () {
-                alert('服务器异常');
+                //alert('服务器异常');
             }
         });
 
