--- a/html/teamadmin.html
+++ b/html/teamadmin.html
@@ -69,7 +69,7 @@
             }
         },
         error:function () {
-            alert('服务器异常');
+            //alert('服务器异常');
         }
     });
 
