--- a/html/commodity.html
+++ b/html/commodity.html
@@ -83,13 +83,14 @@
                             <span class="hongbao">红包{{productHongbao}}元</span>
                             <span class="shop-list-name">{{name}}</span>
                         </div>
-                        <div class="dis-price">
+                        <!--<div class="dis-price">
                             <span>优惠价:{{productPrice}}元</span>
-                            <span>原价:{{productOrginPrice}}元</span>
-                        </div>
+
+                        </div>-->
                         <div class="dis-evaluate">
                             <span>赚:{{marketProfit}}元</span>
-                            <span>佣金率 <span>{{marketProfitPercent}}</span></span>
+                            <span>友惠价:{{productOrginPrice}}元</span>
+                            <!--<span>佣金率 <span>{{marketProfitPercent}}</span></span>-->
                         </div>
                         <div class="dis-del-sale">
                             <div class="dis-del"></div>
@@ -420,7 +421,7 @@
                 }
             },
             error: function () {
-                alert('服务器异常');
+                //alert('服务器异常');
             }
         })
     }
@@ -512,7 +513,7 @@
                 }
             },
             error: function () {
-                alert('服务器异常');
+                //alert('服务器异常');
             }
         });
     }
