--- a/html/friends.html
+++ b/html/friends.html
@@ -220,7 +220,7 @@
                 }
             },
             error:function () {
-                alert('服务器异常');
+                //alert('服务器异常');
             }
         })
     }
