--- a/html/wxmass.html
+++ b/html/wxmass.html
@@ -154,7 +154,7 @@
             }
         },
         error:function () {
-            alert('服务器异常');
+            //alert('服务器异常');
         }
     });
 
