--- a/html/index.html
+++ b/html/index.html
@@ -14,6 +14,7 @@
 <body>
 <!--搜索框-->
 <header>
+    <!--<div class="null-box"></div>-->
     <div class="aui-searchbar" id="search">
         <div class="aui-searchbar-input aui-border-radius">
             <form class="search-form">
